# frunk-from-bytes

./: Cargo.toml
src/: lib.rs
