[package]
name = "from-bytes"
version = "0.1.0"
authors = ["Jack Wrenn <me@jswrenn.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk = "*"
frunk_core = "*"
static_assertions = "*"